# speshelse

./: .Rhistory  .Rprofile  .cruft.json  .gitattributes  .gitignore  Makefile  README.html  README.md  SECURITY.md  app.py  azure-pipelines.yml  bygge_vignette.R  main.py  poetry.toml  pyproject.toml  renv.lock._orig_in_use  requirements.txt  settings.ini  setup.py  virtuelt_miljø.R
.github/: dependabot.yml
Droplister/: Brukerlister.py  Droplister.ipynb  Droplister.py  Droplister_v2.py  Lese_passord_ident.py  aapne_droplister.py  hjelpefunksjoner.py  klass.py  skjemasvar_inspeksjon.py
Institusjonslister/: Institusjonslister.R  Institusjonslister.ipynb
Opptaksområder/: Adresser til akuttmottak.R  Adresser til akuttmottak.ipynb  Befolkning per grunnkrets.R  Befolkning per opptaksområde.R  Bydeler.R  DPS.R  Kartfiler til .parquet.R  Kartfiler til .parquet.ipynb  Karttest.R  Karttest.ipynb  Korrespondansetabell opptaksområde-kommune.ipynb  Lager .png filer av opptaksområdene.R  Lager .png filer av opptaksområdene.ipynb  Opptaksområder 2018.ipynb  Opptaksområder 2019.ipynb  Opptaksområder 2020-2022.ipynb  Opptaksområder DPS (utenhav) 2022.ipynb  Opptaksområder DPS 2021-2022 (foreløpig versjon).ipynb  Opptaksområder DPS 2021-2022 (steg 2 - Jupyter prod).ipynb  Opptaksområder DPS 2021-2022.ipynb  Opptaksområder DPS 2022 (steg 3 - Jupyter dapla).R  Opptaksområder DPS 2022 (steg 3 - Jupyter dapla).ipynb  Opptaksområder HF.ipynb  Opptaksområder HSØ.R  Opptaksområder PHV 2021-2022.ipynb  Opptaksområder PHV 2021-2023.ipynb  Opptaksområder SOM 2014-2022.ipynb  Opptaksområder SOM 2014-2023.R  Opptaksområder SOM 2014-2023.ipynb  Opptaksområder SOM 2018-2022.ipynb  Opptaksområder TSB 2021-2022.ipynb  Opptaksområder TSB 2021-2023.ipynb  Opptaksområder kart.R  analyse.R
Samdata/: Endringslogg.R  Skjemadata til Samdata.R  Variabelliste per skjema.R
Tabellbygger/: Spesialisthelsetjenesten tabellbygger.R
analysis/: README.md
docs/: index.Rmd  index.html  render_markdown.R  test.R  vignette_opptaksomrader.html
experimental/: Behandle private enheter i 20877xx.py  Droplister forenkling.ipynb  Hente id og pin til foretak.py  Lage passordfiler.py  Legge på tekst i hjelpefelt.py  Lese skjemastatus 24xx.py  Paaminnelse private februar.py  Purrebehandling private runde 1.py  Purrebehandling private runde 2.py  Purrebehandling private.py  Purringer i Altinn.ipynb  README.md  Sjekke om passord er lagt inn riktig.py  aarsverk_per_NACE-kode.ipynb  aarsverk_per_NACE-kode.py  analyse_av_populasjon.py  analyse_av_populasjon_dapla.py  brreg_api_test.py  fjerne_skjema39.py  nytt_delregister_24xx.py  (+4 more)
(+106 files in other folders)
